crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__held_back_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"> line 42                                                                                                               "
"                                                                                                                        "
"> line 43                                                                                                               "
"                                                                                                                        "
"> line 44                                                                                                               "
"                                                                                                                        "
"> line 45                                                                                                               "
"                                                                                                                        "
"> line 46                                                                                                               "
"                                                                                                                        "
"> line 47                                                                                                               "
"                                                                                                                        "
"> line 48                                                                                                               "
"                                                                                                                        "
"> line 49                                                                                                               "
"                                                                                                                        "
"> line 50                                                                                                               "
"                                                                                                                        "
"> line 51                                                                                                               "
"                                                                                                                        "
"> line 52                                                                                                               "
"                                                                                                                        "
"> line 53                                                                                                               "
"                                                                                                                        "
"> line 54                                                                                                               "
"                                                                                                                        "
"> line 55                                                                                                               "
"                                                                                                                        "
"> line 56                                                                                                               "
"                                                                                                                        "
"> line 57                                                                                                               "
"                                                                                                                        "
"> line 58                                                                                                               "
"                                        ↓ 2 lines below · end or click to follow                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
