crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__held_back_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"> line 42                                                                       "
"                                                                                "
"> line 43                                                                       "
"                                                                                "
"> line 44                                                                       "
"                                                                                "
"> line 45                                                                       "
"                                                                                "
"> line 46                                                                       "
"                                                                                "
"> line 47                                                                       "
"                                                                                "
"> line 48                                                                       "
"                                                                                "
"> line 49                                                                       "
"                                                                                "
"> line 50                                                                       "
"                   ↓ 18 lines below · end or click to follow                    "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
