crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__help_80x30.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_sized(80, 30, &state, &ui, now)"
---
"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"ctrl+d       exit on an empty input                                             "
"up/down      prompt history at the first and last line                          "
"down         walk the sessions (empty box)                                      "
"ctrl+a/e     start / end of the line (home · end)                               "
"alt+b/f      move one word                                                      "
"ctrl+w/u/k   delete word · to line start · to line end                          "
"pgup/pgdn    scroll the transcript                                              "
"v · drag     select · ↑↓←→ or a drag extend · y, ctrl+c or release copy         "
"ctrl+g       the same list · ↑↓ to walk it                                      "
"ctrl+t       show / hide the task list                                          "
"ctrl+p       plugin state (rooms, panels to pin)                                "
"tab          complete → queue → next card                                       "
"shift+tab    cycle permission mode                                              "
"1-9 · y/a/n  answer the open dialog                                             "
"ctrl+e       expand the dialog's preview                                        "
"ctrl+o       expand the latest result · again for all of it                     "
"ctrl+b       background the running command                                     "
"/ · !        run a command · run a shell line                                   "
"click        a picture · open it                                                "
"?            toggle this panel                                                  "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
