crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__inked_diff.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "inked(\"diff\", \"@@ -1,2 +1,2 @@\\n-let a = 1;\\n+let a = 2;\\n ok\\n\")"
---
@@ -1,2 +1,2 @@⟨dim⟩
-let a = 1;⟨removed⟩
+let a = 2;⟨added⟩
 ok⟨dim⟩
