crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__inked_python.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "inked(\"python\",\n\"# read it first\\ndef run(path):\\n    return open(path).read()\\n\")"
---
    python⟨dim⟩
    ⟨dim⟩# read it first⟨dim⟩
    ⟨dim⟩def⟨keyword⟩ run(path):⟨text⟩
    ⟨dim⟩    ⟨text⟩return⟨keyword⟩ open(path).read()⟨text⟩
