crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__inked_rust.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "inked(\"rust\", RUST)"
---
    rust⟨dim⟩
    ⟨dim⟩// the frame, once⟨dim⟩
    ⟨dim⟩pub⟨keyword⟩ ⟨text⟩fn⟨keyword⟩ draw(now: Now) -> ⟨text⟩bool⟨keyword⟩ {⟨text⟩
    ⟨dim⟩    ⟨text⟩let⟨keyword⟩ ready = ⟨text⟩true⟨keyword⟩;⟨text⟩
    ⟨dim⟩    ready && now.motion⟨text⟩
    ⟨dim⟩}⟨text⟩
